# gpt-psychotypes-bot

./: bot.py  config.py  initial_data.py  main.py  pre_start.py  pyproject.toml
alembic/: env.py
alembic/versions/: 1945bb98df54_migrations.py  3f2b2ea7fef2_migrations.py  602243bdf084_migrations.py  65db0784a6dc_migrations.py  8d88ed936f63_migrations.py  94c5b91e8132_migratoins.py  9dcd119b3569_migratoins.py  b21b488fc707_migratoins.py  b21ee6d0e948_migrations.py  c354e4fddfa8_migrations.py  c3b78b5a6ebf_migrations.py  c7d4eb476c4d_migratoins.py  eb39eb667fd8_migrations.py
handlers/: __init__.py  admin.py  ai.py  filters.py  markups.py  middlewares.py  open_ai.py  payment.py  states.py  user.py
models/: databases.py  db.py
models/dbs/: enums.py  models.py  orm.py
utils/: openai_api.py  payments.py  tasks.py
