[project]
name = "gpt-psychotypes-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiogram>=3.13.1",
    "alembic>=1.13.3",
    "apscheduler>=3.10.4",
    "asyncpg>=0.29.0",
    "openai>=1.52.0",
    "psycopg2>=2.9.10",
    "python-dotenv>=1.0.1",
    "sqlalchemy>=2.0.36",
    "yookassa>=3.3.0",
]
